--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "next": "^6.0.3",
+    "next-routes": "^1.4.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-scroll-parallax": "^1.3.5"
   }
 }
