--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "es6-promise": "^4.2.4",
     "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^6.0.3",
     "next-routes": "^1.4.2",
     "react": "^16.4.1",
