--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettify": "prettier --write \"**/*.js\" !**/node_modules/** !./node_modules/**  !./.next/"
   },
   "dependencies": {
     "es6-promise": "^4.2.4",
@@ -11,6 +12,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^6.0.3",
     "next-routes": "^1.4.2",
+    "prettier": "^1.13.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scroll-parallax": "^1.3.5"
