--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "prettify": "prettier --write \"**/*.js\" !**/node_modules/** !./node_modules/**  !./.next/"
   },
   "dependencies": {
+    "@zeit/next-sass": "^0.2.0",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "next": "^6.0.3",
     "next-routes": "^1.4.2",
+    "node-sass": "^4.9.2",
     "prettier": "^1.13.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
