--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.9.2",
     "prettier": "^1.13.7",
     "react": "^16.4.1",
+    "react-device-detect": "^1.5.9",
     "react-dom": "^16.4.1",
     "react-scroll-parallax": "^1.3.5"
   }
