--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "^16.4.1",
     "react-device-detect": "^1.5.9",
     "react-dom": "^16.4.1",
-    "react-scroll-parallax": "^1.3.5"
+    "react-id-swiper": "^1.6.7",
+    "react-scroll-parallax": "^1.3.5",
+    "react-swipe": "^5.1.1",
+    "swipe-js-iso": "^2.0.4"
   }
 }
