--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Claudia Schioppa",
     "theme_color": "#ce4841",
     "background_color": "#ffffff",
-    "display": "browser",
+    "display": "standalone",
     "Scope": "/",
     "start_url": "/",
     "icons": [
